# ImageUploader

./: Makefile  README.md  docker-compose.yaml
back/: Cargo.toml  Dockerfile
back/src/: endpoints.rs  main.rs  mysql.rs  s3.rs
back/src/mysql/: album.rs  item.rs  model.rs  schema.rs
back/src/mysql/album/: model.rs  schema.rs
back/src/mysql/item/: model.rs  schema.rs
db/mysql/sql/: initdb.sql
front/: Dockerfile  package-lock.json  package.json
front/public/: index.html
front/src/: App.tsx  index.tsx
front/src/components/: AlbumSettingsDialog.tsx  MsgViewer.tsx
front/src/model/: Album.tsx
front/src/pages/: AlbumDetail.tsx  AlbumList.tsx
proxy/: envoy.yaml
